# Neoterik_AI

./: .gitignore  notes.md
api/: .env  =3.0.0  agent_input_prompt_log.txt  celery_worker.py  company_research_graph.py  extract_covers.py  main.py  models_supabase.py  output_job_data.json  pyproject.toml  requirements.txt  supabase_client.py
api/agents/cover_letter_generator/: agent.py  backup.py  models.py
api/agents/langgraph_workflow/: unified_workflow.py
api/agents/repo_parsing/: agent.py  models.py  workflow.py
api/agents/resume_parsing/: agent.py  models.py  workflow.py
api/agents/style_rag_agent/: agent.py  chroma_cloud.py  models.py  rag_query_runner.py
api/agents/style_rag_agent/data/: cover_letter_templates.json
api/agents/style_rag_agent/data/cover-letters/: Administrative-Assistant-Cover-Letter-Example.docx  Architect-Cover-Letter-Example.docx  Basic-Application-Template-Copy.docx  Business-Analyst-Cover-Letter-Example.docx  Business-Manager-Cover-Letter-Example.docx  Career-Change-Cover-Letter-Template-1.docx  Changing-Careers-Cover-Letter-Template.docx  Communications-cover-letter-template-1.docx  Consultant-Cover-Letter-Example.docx  Digital-Marketing-Cover-Letter-Example.docx  Formal-Cover-Letter-Template-1.docx  Front-Desk-Cover-Letter-Example.docx  Graphic-Designer-Cover-Letter-Example.docx  Human-Resources-Cover-Letter-Example.docx  Human-Resources-cover-letter-template-1.docx  (+20 more)
api/patches/: fix_pyresparser.py  fix_pyresparser2.py
api/rag_store/: chroma.sqlite3
api/sample_resume/: test-resume.md
api/specs/: neoterik.http
(+101 files in other folders)
